{+} fixing bug on hover project card on mobile

--- a/style.css
+++ b/style.css
@@ -325,9 +325,11 @@ nav {
     opacity: 0;
     transition: all 450ms ease;
     z-index: 2;
+    transform: translateY(100%);
 }
 
 .project:hover .project__wrapper:before {
+    transform: translateY(0);
     opacity: 0.7;
 }
 
@@ -474,6 +476,10 @@ footer {
         padding: 0;
         left: 0;
         width: 100%;
+    }
+
+    .project__wrapper {
+        border-radius: 0;
     }
 
     .project__description--para {
